# Hippocampus

./: .gitignore  .mcp.json.stdio.backup  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.catpaw/rules/: memory-center-archive.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml  secret-scan.yml
.trae/rules/: hippocampus-archive.md  memory-center-archive.md
contest/: creative-proposal.html  mc-demo-nginx.conf  setup-demo.sh  初赛帖正文.md  报名帖正文.md
contest/demo/: demo.css  demo.js  index.html
crates/hippocampus-agents/: Cargo.toml
crates/hippocampus-agents/src/: agent_family.rs  agent_profile.rs  lib.rs
crates/hippocampus-bench/: Cargo.toml
crates/hippocampus-bench/benches/: backend_compare.rs  core_operations.rs  format_compare.rs
crates/hippocampus-bench/src/: lib.rs
crates/hippocampus-bench/tests/: concurrent_archive.rs  concurrent_read_write.rs  concurrent_update.rs  sqlite_pool_stress.rs
crates/hippocampus-core/: Cargo.toml
crates/hippocampus-core-logic/: Cargo.toml
crates/hippocampus-core-logic/src/: archive.rs  bm25_wasm.rs  compact.rs  hybrid.rs  lib.rs  retrieve.rs  storage.rs  test_support.rs
crates/hippocampus-core-logic/tests/: mock_storage.rs  mock_storage_basic.rs
crates/hippocampus-llm/: Cargo.toml
crates/hippocampus-llm/src/: detector.rs  embedder.rs  lib.rs  scorer.rs
crates/hippocampus-mcp/: Cargo.toml
crates/hippocampus-node/: Cargo.toml
crates/hippocampus-node/src/: lib.rs
crates/hippocampus-python/: Cargo.toml  pyproject.toml
crates/hippocampus-python/src/: lib.rs
crates/hippocampus-python/tests/: test_hippocampus.py
crates/hippocampus-scenarios/: Cargo.toml
crates/hippocampus-scenarios/src/: lib.rs  priority_tags.rs  profile.rs  retrieval_strategy.rs  scenario.rs  score_weights.rs  summary_focus.rs
crates/hippocampus-search/: Cargo.toml
crates/hippocampus-search/src/: lib.rs  search.rs  session_search.rs
crates/hippocampus-server/: Cargo.toml
crates/hippocampus-skills/: Cargo.toml
crates/hippocampus-skills/src/: builtin_skill.rs  lib.rs  memory_link.rs
crates/hippocampus-wasm/: Cargo.toml
crates/hippocampus-wasm/src/: bindings.rs  error.rs  js_storage.rs  lib.rs  memory_storage.rs
crates/hippocampus-wasm/tests/: js_storage.rs  memory_storage.rs
crates/memory-center-adapter/: Cargo.toml
crates/memory-center-adapter/src/: error.rs  lib.rs  record.rs  types.rs
crates/memory-center-agents/: Cargo.toml
crates/memory-center-agents/src/: agent_family.rs  agent_profile.rs  lib.rs
crates/memory-center-archive-core/: Cargo.toml
crates/memory-center-bench/: Cargo.toml
crates/memory-center-bench/benches/: backend_compare.rs  core_operations.rs  format_compare.rs
crates/memory-center-bench/src/: lib.rs
crates/memory-center-bench/tests/: concurrent_archive.rs  concurrent_read_write.rs  concurrent_update.rs  sqlite_pool_stress.rs
crates/memory-center-core/: Cargo.toml
crates/memory-center-core-logic/: Cargo.toml
crates/memory-center-core-logic/src/: compact.rs  conflict.rs  generate.rs  heuristic.rs  lib.rs  model.rs  retrieve.rs  score.rs  storage.rs  test_support.rs
crates/memory-center-core-logic/tests/: mock_storage.rs  mock_storage_basic.rs
crates/memory-center-dashboard/: Cargo.toml
crates/memory-center-dashboard/src/: app.rs  client.rs  eval_data.rs  lib.rs  main.rs  ui.rs
crates/memory-center-ffi/: Cargo.toml
crates/memory-center-go/: Makefile  build.bat  go.mod  memorycenter.go  memorycenter_test.go
crates/memory-center-mcp/: Cargo.toml
crates/memory-center-mcp/src/: bootstrap.rs  lib.rs  main.rs
crates/memory-center-mcp/tests/: pre_compress_integration.rs  scenario_detect_integration.rs
crates/memory-center-models/: Cargo.toml
crates/memory-center-models/src/: family.rs  lib.rs  registry.rs  sentencepiece_impl.rs  tiktoken_impl.rs  tokenizer.rs  variant.rs
crates/memory-center-node/: Cargo.toml
crates/memory-center-node/src/: lib.rs
crates/memory-center-presets/: Cargo.toml
crates/memory-center-presets/src/: builder.rs  combined.rs  detect.rs  lib.rs  linkage.rs  resolver.rs  scenario_detect.rs
crates/memory-center-python/: Cargo.toml  pyproject.toml
crates/memory-center-python/src/: lib.rs
crates/memory-center-python/tests/: test_memory_center.py
crates/memory-center-scenarios/: Cargo.toml
crates/memory-center-scenarios/src/: lib.rs  priority_tags.rs  profile.rs  retrieval_strategy.rs  score_weights.rs
crates/memory-center-search/: Cargo.toml
crates/memory-center-search/src/: lib.rs  search.rs  session_search.rs
crates/memory-center-sidecar/: Cargo.toml
crates/memory-center-sidecar/src/: archive.rs  config.rs  engine.rs  main.rs  opencode_db.rs  opencode_writer.rs  state.rs  watcher.rs
crates/memory-center-skills/: Cargo.toml
crates/memory-center-skills/src/: lib.rs  memory_link.rs  skill_profile.rs
crates/memory-center-windows/: Cargo.toml
crates/memory-center-windows/src/: compression.rs  cooperation.rs  lib.rs  window_profile.rs
deploy/: hippocampus-server.service.template  mc-demo-memory-center.conf  memory-center-server.service.template  memory-center.service.example  nginx-memory-center-block.conf  nginx-memory-center.conf  openworld_nginx_with_mcp.conf  post-receive.sh  setup-auto-deploy.sh  setup-llm-env.sh  test_e2e.py  test_full_capabilities.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEPLOY.md  POSITIONING.md  book.toml  cooperative-design.md  preset-crates-architecture.md  preset-crates-inventory.md  sentencepiece-guide.md  token-system-roadmap-v2.54.md  v2.30-roadmap-agent-onboarding.md  v2.31-roadmap-context-awareness.md
eval/: EVAL_REPORT.md
examples/calibrate_tokens/: Cargo.toml
examples/calibrate_tokens/src/: main.rs
scripts/: pre-commit-secret-scan.sh
wiki/: API-Reference.md  Architecture.md  Changelog.md  Crate-Guide.md  Deployment.md  Getting-Started.md  Home.md  MCP-Integration.md  _Sidebar.md
(+114 files in other folders)
