[package]
name = "hippocampus-core-logic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Hippocampus 核心逻辑 - 纯逻辑 + Storage trait（WASM 兼容）"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
# 仅 sync feature，WASM 兼容（不引入 fs/rt）
tokio = { version = "1.0", features = ["sync"] }
rmp-serde.workspace = true
dashmap.workspace = true
jieba-rs.workspace = true

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
