[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "hippocampus-python"
requires-python = ">=3.9"
description = "Agent 记忆库 - 持久化高效完整记忆法（Python 原生绑定）"
license = { text = "MIT OR Apache-2.0" }
keywords = ["agent", "memory", "llm", "ai", "context"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[tool.maturin]
# 特征配置：使用 extension-module（不链接 libpython，Mac 上必需）
features = ["pyo3/extension-module"]
# 模块名（与 Cargo.toml lib.name 一致）
module-name = "hippocampus_python"
