[package]
name = "hippocampus-scenarios"
version.workspace = true
edition.workspace = true
description = "Hippocampus 工作场景特配库 - 7 场景预设 + 摘要 focus + 评分权重 + 检索策略"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hippocampus-core = { path = "../hippocampus-core", version = "0.1.0" }
