[package]
name = "memory-center-agents"
version.workspace = true
edition.workspace = true
description = "MemoryCenter Agent 代理工具特配库 - 11 Agent family（4 主流 + 7 通用）+ Custom 兜底"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
memory-center-core = { path = "../memory-center-core", version = "0.1.0" }
