[package]
name = "memory-center-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MemoryCenter MCP server - Model Context Protocol 接口"

[lib]
name = "memory_center_mcp"
path = "src/lib.rs"

[[bin]]
name = "memory-center-mcp"
path = "src/main.rs"

[dependencies]
memory-center-core = { path = "../memory-center-core" }
# v2.12：复用 HttpLlmDetector + LlmDetectorConfig（从 memory-center-llm，避免引入 axum/moka 重依赖）
memory-center-llm = { path = "../memory-center-llm" }
# v2.18 批次2：复用 SessionSearchRouter（从 memory-center-search，避免引入 axum 重依赖）
memory-center-search = { path = "../memory-center-search" }
# v2.29：预设组合层（build_from_strings 公共函数 + Agent/Scenario/Model 枚举）
memory-center-presets = { path = "../memory-center-presets" }
memory-center-agents = { path = "../memory-center-agents" }
memory-center-scenarios = { path = "../memory-center-scenarios" }
memory-center-models = { path = "../memory-center-models" }
rmcp = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
# v2.34：pre_compress_hook 生成 hook_id 用（已是 workspace 依赖，原仅在 dev-dependencies）
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { version = "1.0", features = ["rt", "macros", "time"] }
async-trait = "0.1"
