# memory-center-node
# napi-rs 3.x 原生 Node.js 绑定 - 将 Core 能力暴露为 Node.js 原生模块

[package]
name = "memory-center-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MemoryCenter Node.js 绑定 - napi-rs 原生扩展，异步 Promise API"

[lib]
# Node.js 原生模块必须是 cdylib
# lib.name 决定 .node 文件名（memory_center_node）
name = "memory_center_node"
crate-type = ["cdylib"]

[dependencies]
memory-center-core = { path = "../memory-center-core", version = "0.1.0" }
# napi-rs 3.x：异步 Promise + tokio runtime
napi.workspace = true
napi-derive.workspace = true
# serde 用于 JSON 中间转换（JS 对象 ↔ Rust structs）
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.0"
# tokio macros feature 用于 #[tokio::test]（异步测试）
tokio = { workspace = true, features = ["macros", "rt"] }
