# memory-center-python
# PyO3 原生 Python 绑定 - 将 Core 能力暴露为 Python 模块 memory_center_python

[package]
name = "memory-center-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MemoryCenter Python 绑定 - PyO3 原生扩展，供 Python 直接调用"

[lib]
# Python 扩展模块必须是 cdylib
# lib.name 决定 Python import 的模块名（memory_center_python）
name = "memory_center_python"
crate-type = ["cdylib"]

[dependencies]
memory-center-core = { path = "../memory-center-core", version = "0.1.0" }
# v2.21 批次 8d：暴露 PresetBuilder 给 Python
memory-center-presets = { path = "../memory-center-presets", version = "0.1.0" }
memory-center-agents = { path = "../memory-center-agents", version = "0.1.0" }
memory-center-scenarios = { path = "../memory-center-scenarios", version = "0.1.0" }
# v2.23：from_env() 类方法注入 LLM 摘要生成器
memory-center-llm = { path = "../memory-center-llm", version = "0.1.0" }
# v2.29：PresetBuilder 补齐 with_model / with_window / with_skill(s) 方法
memory-center-models = { path = "../memory-center-models", version = "0.1.0" }
memory-center-windows = { path = "../memory-center-windows", version = "0.1.0" }
memory-center-skills = { path = "../memory-center-skills", version = "0.1.0" }
# PyO3 Python 绑定框架（extension-module feature 避免 Mac 上链接 libpython）
pyo3.workspace = true
# FFI 内部需要独立 tokio runtime 来 block_on 异步 Core 方法
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_json.workspace = true
serde = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
async-trait = "0.1"
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
